final fixes - detailUser for admin

--- a/src/main/webapp/WEB-INF/views/admin/users.html
+++ b/src/main/webapp/WEB-INF/views/admin/users.html
@@ -38,7 +38,7 @@
 										data-th-href="@{/admin/disabled/(id=${user.userId})}"
 										onclick="return confirm('Opravdu zneaktivnit tohoto uzivatele?');"
 										class="btn btn-primary btn-sm">Disable</a> <a href="#"
-										data-th-href="@{/admin/detail/(id=${user.userId})}"
+										data-th-href="@{/admin/detailUser/(id=${user.userId})}"
 										class="btn btn-primary btn-sm">Detail</a> <a href="#"
 										data-th-href="@{/admin/user/(id=${user.userId})}"
 										class="btn btn-primary btn-sm">Edit</a></td>
@@ -52,7 +52,7 @@
 										data-th-href="@{/admin/enabled/(id=${user.userId})}"
 										onclick="return confirm('Opravdu aktivovat tohoto uzivatele?');"
 										class="btn btn-primary btn-sm">Enable</a> <a href="#"
-										data-th-href="@{/admin/detail/(id=${user.userId})}"
+										data-th-href="@{/admin/detailUser/(id=${user.userId})}"
 										class="btn btn-primary btn-sm">Detail</a></td>
 								</tr>
 
